--- a/principal/templates/privacy_terms_en.html
+++ b/principal/templates/privacy_terms_en.html
@@ -1,12 +1,10 @@
 {% extends 'base.html' %}
-{% load i18n %}
-{% block title %} {% trans "Privacy terms" %} {% endblock %}
+{% block title %}Privacy terms{% endblock %}
 {% block content %}
 
 <div class="container">
     <div class="row">
         <div class="col-lg-12 text-justify">
-            {% blocktrans trimmed %}
             <h2>Terms of use</h2>
             <p>According to the provisions of Law 15 /1999 of December
 				13, Protection of Personal Data (hereinafter LOPD), BrainTravel Co.,
@@ -65,7 +63,6 @@
             <p>
                 SEVILLA Tel: +34 955555555 
             </p>
-            {% endblocktrans %}
         </div>
     </div>
 </div>
