--- a/principal/templates/index.html
+++ b/principal/templates/index.html
@@ -61,7 +61,7 @@
 		<div class="container">
 			<div class="row text-center">
 				<div class="col-lg-10 col-lg-offset-1">
-					<h2>Features</h2>
+					<h2>{% trans "Features" %}</h2>
 					<hr class="small">
 					<div class="row">
 						<div class="col-md-3 col-sm-6">
