--- a/principal/templates/email/register_confirmation_en.html
+++ b/principal/templates/email/register_confirmation_en.html
@@ -4,7 +4,7 @@
         <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
         <meta name="viewport" content="width=device-width">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>*|MC:SUBJECT|*</title>
+        <title>Confirmation email</title>
 
 
 
@@ -605,7 +605,7 @@
                         <td valign="top" class="mcnTextContent" style="padding-top: 9px;padding-right: 18px;padding-bottom: 9px;padding-left: 18px;mso-table-lspace: 0pt;mso-table-rspace: 0pt;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;color: #FFFFFF;font-family: Helvetica;font-size: 16px;line-height: 150%;text-align: left;">
 
                             <br>
-Sweet! Thanks a lot for joining&nbsp;<em><strong>BrainTravel</strong></em>.<br>
+Sweet! Thanks a lot for joining<em><strong>BrainTravel</strong></em>.<br>
 We just need one more step to have your account fully operational, please click in the link below to validate your account.<br>
 Your password is: <strong>{{rand_password}}</strong><br>
 <br>
