Corregida dos etiquetas trans

--- a/principal/templates/signin.html
+++ b/principal/templates/signin.html
@@ -76,7 +76,7 @@
 		                                    <div class="input-group-addon">
 		                                        <span class="fa fa-user"></span>
 		                                    </div>
-		                                    <input type="text" class="form-control" id="first_name" name="first_name" placeholder="{% trasn "Name" %}" required="required" />
+		                                    <input type="text" class="form-control" id="first_name" name="first_name" placeholder="{% trans "Name" %}" required="required" />
 		                                </div>
 		                                <span class="help-block with-errors"></span>
 		                            </div>
@@ -97,7 +97,7 @@
 		                            </div>
 		
 		                            <div class="form-group">
-		                                <button type="submit" id="singUp-button" class="btn btn-lg btn-primary btn-block"><span id="spinner" class="fa fa-spinner fa-spin"></span> {% trasn "Sign up" %}</button>
+		                                <button type="submit" id="singUp-button" class="btn btn-lg btn-primary btn-block"><span id="spinner" class="fa fa-spinner fa-spin"></span> {% trans "Sign up" %}</button>
 		                            </div>
 		                        </form>
 		                    </div>
