--- a/principal/templates/miscellaneous/traveller-menu.html
+++ b/principal/templates/miscellaneous/traveller-menu.html
@@ -13,7 +13,7 @@
 <li>
     <a id="sign_ind_nav" href="/statistics/">
         <span class="fa fa-bar-chart"></span>
-        <strong>{%trans "View statistics" %}</strong>
+        <strong>{%trans "Statistics" %}</strong>
     </a>
 </li>
 
