--- a/principal/templates/signin.html
+++ b/principal/templates/signin.html
@@ -63,7 +63,7 @@
             <div class="modal-content modal-bt">
                 <div class="modal-header text-center">
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                    <h4 class="modal-title" id="myModalLabel">Sign Up</h4>
+                    <h4 class="modal-title" id="myModalLabel">{% trans "Sign Up" %}</h4>
                 </div>
                 <div class="modal-body">
                     <div class="container-fluid">
@@ -92,7 +92,7 @@
 		                            </div>
 		
 		                            <div class="form-group">
-		                                <label><input type="checkbox" name="terms" required> {% trans "I agree with the "%}<a href="/privacy_terms" target="_blank">{% trans "Terms and Conditions" %}</a>.</label>
+		                                <label><input type="checkbox" name="terms" required> {% trans "I am agree with the "%}<a href="/privacy_terms" target="_blank">{% trans "Terms and Conditions" %}</a>.</label>
 		                                <span class="help-block with-errors"></span>
 		                            </div>
 		
