--- a/principal/templates/signin.html
+++ b/principal/templates/signin.html
@@ -22,11 +22,11 @@
                 <div class="alert alert-danger alert-dismissible col-xs-12" role="alert">
                     <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
                     {% if  form.visible_fields.0.errors %}
-                        <strong>Email</strong>
+                        <strong>{% trans "Email" %}</strong>
                         {{ form.visible_fields.0.errors }}
                     {% endif %}
                     {% if  form.visible_fields.1.errors %}
-                        <strong>Password</strong>
+                        <strong>{% trans "Password" %}</strong>
                         {{ form.visible_fields.1.errors }}
                     {% endif %}
                 </div>
@@ -92,7 +92,7 @@
 		                            </div>
 		
 		                            <div class="form-group">
-		                                <label><input type="checkbox" name="terms" required> {% trans "I am agree with the "%}<a href="/privacy_terms" target="_blank">{% trans "Terms and Conditions" %}</a>.</label>
+		                                <label><input type="checkbox" name="terms" required> {% trans "I am agree with the "%}<a href="/privacy_terms" target="_blank"> {% trans "Terms and Conditions" %}</a></label>
 		                                <span class="help-block with-errors"></span>
 		                            </div>
 		
