Arreglado el encoding de las paginas de politica de cookies y sobre nosotros

--- a/principal/templates/about_us_es.html
+++ b/principal/templates/about_us_es.html
@@ -13,14 +13,14 @@
             CIF: 123456789
             </p>
             <p>
-            Informaci&oacuten de registro: Inscrita en el Registro Mercantil de Sevilla, Fecha: 01/01/2015, Contrato nº .: 169011 BORME
+            Informaci&oacuten de registro: Inscrita en el Registro Mercantil de Sevilla, Fecha: 01/01/2015, Contrato n&deg .: 169011 BORME
             </p>
             <p>
-            La web <a href="http://www.braintravel.com">http://www.braintravel.com</a>es operado por BrainTravel Co., Inc. (el dueño) como empresa.
+            La web <a href="http://www.braintravel.com">http://www.braintravel.com</a> es operado por BrainTravel Co., Inc. (el due&ntildeo) como empresa.
             </p>
             <p>
             Para cualquier problema con &eacutel, p&oacutengase en contacto con el correo electr&oacutenico <a href="mailto:clientes.braintravel@gmail.com"> clientes.braintravel@gmail.com </a>
-            o en el tel&eacutefono +34 955555555
+            o en el tel&eacutefono +34 955555555
             </p>
 
         </div>
