--- a/principal/templates/cookies_policies_es.html
+++ b/principal/templates/cookies_policies_es.html
@@ -13,28 +13,28 @@
                Los usuarios pueden acceder a esta informaci&oacuten en todo momento a trav&eacutes del link habilitado en la web.
             </p>
 
-            <h3>¿Qu&eacute es una Cookie?</h3>
+            <h3>&iquestQu&eacute es una Cookie?</h3>
 
-            <p>Una “Cookie” es un pequeño archivo de texto que un sitio web almacena en el navegador del usuario. Las
+            <p>Una 'Cookie' es un peque&ntildeo archivo de texto que un sitio web almacena en el navegador del usuario. Las
                 cookies facilitan el uso y la navegaci&oacuten por una p&aacutegina web y son esenciales para el funcionamiento de
                 internet, aportando innumerables ventajas en la prestaci&oacuten de servicios interactivos.
 		    </p>
 
 		    <p>
 		        Las cookies se utilizan, por ejemplo, para gestionar la sesi&oacuten del usuario (reduciendo el n&uacutemero de veces
-                que tiene que incluir su contraseña), mejorar los servicios ofrecidos, o para adecuar los contenidos
+                que tiene que incluir su contrase&ntildea), mejorar los servicios ofrecidos, o para adecuar los contenidos
                 de una p&aacutegina web a sus preferencias.
 		    </p>
 
             <p>
-                Las cookies pueden ser de “sesi&oacuten”, por lo que se borrar&aacuten una vez el usuario abandone la p&aacutegina web
-                que las gener&oacute o “persistentes”, que permanecen en su ordenador hasta una fecha determinada.
+                Las cookies pueden ser de 'sesi&oacuten', por lo que se borrar&aacuten una vez el usuario abandone la p&aacutegina web
+                que las gener&oacute o 'persistentes', que permanecen en su ordenador hasta una fecha determinada.
 		    </p>
 
             <p>
-                Asimismo, las cookies pueden ser “propias”, gestionadas por el dominio al que el usuario accede y del
+                Asimismo, las cookies pueden ser 'propias', gestionadas por el dominio al que el usuario accede y del
                 que solicita un determinado servicio (en este caso los domicilio titularidad de BrainTravel Co., Inc.)
-                o “cookies de terceros”, enviadas al equipo de usuario desde un dominio diferente al que se accede.
+                o 'cookies de terceros', enviadas al equipo de usuario desde un dominio diferente al que se accede.
 			</p>
 
             <h3>En los siguientes puntos recogen las cookies utilizadas por todos los sitios que abarca el estudio,
