--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -251,6 +251,6 @@ body {
 }
 
 /* 404 error y 500 error */
-.error-template {padding: 40px 15px;text-align: center;}
+.error-template {padding: 40px 15px;text-align: center;margin-top: 50px;margin-bottom: 50px;}
 .error-actions {margin-top:15px;margin-bottom:15px;}
 .error-actions .btn { margin-right:10px; }
