Arreglados links del correo

--- a/principal/templates/email/register_confirmation_es.html
+++ b/principal/templates/email/register_confirmation_es.html
@@ -627,7 +627,7 @@ Saludos, el equipo de BrainTravel.
                     <tbody>
                         <tr>
                             <td align="center" valign="middle" class="mcnButtonContent" style="font-family: Arial;font-size: 16px;padding: 20px;mso-table-lspace: 0pt;mso-table-rspace: 0pt;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;">
-                                <a class="mcnButton " title="Confirm account" href="localhost:8000/confirm_account?hash={{hash}}&username={{username}}&rand_password={{rand_password}}" target="_blank" style="font-weight: bold;letter-spacing: normal;line-height: 100%;text-align: center;text-decoration: none;color: #D55258;word-wrap: break-word;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;display: block;">Confirmar cuenta</a>
+                                <a class="mcnButton " title="Confirm account" href="http://localhost:8000/confirm_account?hash={{hash}}&username={{username}}&rand_password={{rand_password}}" target="_blank" style="font-weight: bold;letter-spacing: normal;line-height: 100%;text-align: center;text-decoration: none;color: #D55258;word-wrap: break-word;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;display: block;">Confirmar cuenta</a>
                             </td>
                         </tr>
                     </tbody>
