--- a/principal/templates/plan_creation.html
+++ b/principal/templates/plan_creation.html
@@ -6,12 +6,12 @@
 
 <div class="container">
     <div class="row">
-	    <div class="col-xs-12 col-sm-6 col-sm-offset-3">
-		    <div class="text-center">
-		        <h1>{% trans "Plan a trip" %}</h1>
-		        <p>{% trans "Enter the data and we'll plan a trip for you" %}</p>
-		    </div>
-
+	    <div class="col-xs-12 col-sm-6 col-sm-offset-3 plan-creation">
+	       <div class="row plan-creation-head text-center">
+	           <h1>{% trans "Plan a trip" %}</h1>
+	           <p>{% trans "Enter the data and we'll plan a trip for you" %}</p>
+	       </div>
+	       <br>
 		    <div class="text-left">
 		         <fieldset>
 		             <legend>{% trans "Trip data" %}</legend>
@@ -106,7 +106,7 @@
 
 			                <div class="col-xs-12">
 			                    <h4>{% trans "Selected constrains" %}</h4>
-			                    <div class="row">
+			                    <div class="row row-filter" id="rest1_row">
 			                        <div class="col-xs-8">
 			                            <h4><span class="label label-primary" id="rest1_lb1"></span></h4>
 	                                </div>
@@ -114,8 +114,8 @@
 	                                   <input type="hidden" class="btn btn-link" id="delete1" name="Delete lb1" value="{% trans "Delete" %}" onclick=deleteHidden("1")>
 	                                </div>
                                 </div>
-                                <br>
-                                <div class="row">
+                                
+                                <div class="row row-filter" id="rest2_row">
                                     <div class="col-xs-8">
                                         <h4><span class="label label-primary" id="rest1_lb2"></span></h4>
                                     </div>
@@ -123,8 +123,8 @@
                                         <input type="hidden" class="btn btn-link" id="delete2" name="Delete lb2" value="{% trans "Delete " %}" onclick=deleteHidden("2")>
                                     </div>
                                 </div>
-                                <br>
-                                <div class="row">
+                                
+                                <div class="row row-filter" id="rest3_row">
                                     <div class="col-xs-8">
                                         <h4><span class="label label-primary" id="rest1_lb3"></span></h4>
                                     </div>
