--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -1,256 +1,318 @@
 /* General */
-
-hr{
-    color: #ABB7B7;
+hr {
+	color: #ABB7B7;
 }
+
 .label {
 	color: #000;
 }
 
 /*#input-search {*/
-    /*font-family: 'Lucida Grande', 'Lucida Sans Unicode', 'Lucida Sans', Geneva, Verdana, sans-serif;*/
-    /*font-size: 40px;*/
-    /*border-width: 0px;*/
-    /*background: #EEEEEE;*/
+/*font-family: 'Lucida Grande', 'Lucida Sans Unicode', 'Lucida Sans', Geneva, Verdana, sans-serif;*/
+/*font-size: 40px;*/
+/*border-width: 0px;*/
+/*background: #EEEEEE;*/
 /*}*/
 
 /*#input-search:focus{*/
-    /*font-family: 'Lucida Grande', 'Lucida Sans Unicode', 'Lucida Sans', Geneva, Verdana, sans-serif;*/
-    /*outline-width: 0;*/
+/*font-family: 'Lucida Grande', 'Lucida Sans Unicode', 'Lucida Sans', Geneva, Verdana, sans-serif;*/
+/*outline-width: 0;*/
 /*}*/
-
 .error-message-search {
-    text-align: center;
+	text-align: center;
 }
 
-
 .forum .forum-post-panel {
-    margin-bottom: 1em;
+	margin-bottom: 1em;
 }
 
 .forum.media-list li img.avatar {
-    display: block;
-    margin: 0 auto;
+	display: block;
+	margin: 0 auto;
 }
 
 .forum.media-list li .user-info {
-    text-align: center;
-    width: 8em;
+	text-align: center;
+	width: 8em;
 }
 
-@media (max-width: 760px) {
-    .forum.media-list li .user-info {
-        float: none;
-        width: 100%;
-        margin-bottom: 1em;
-    }
+@media ( max-width : 760px) {
+	.forum.media-list li .user-info {
+		float: none;
+		width: 100%;
+		margin-bottom: 1em;
+	}
 }
 
 img {
-    vertical-align: middle;
+	vertical-align: middle;
 }
 
 .img-responsive {
-    display: block;
-    height: auto;
-    max-width: 100%;
+	display: block;
+	height: auto;
+	max-width: 100%;
 }
 
 .img-rounded {
-    border-radius: 3px;
+	border-radius: 3px;
 }
 
 .img-thumbnail {
-    background-color: #fff;
-    border: 1px solid #ededf0;
-    border-radius: 3px;
-    display: inline-block;
-    height: auto;
-    line-height: 1.428571429;
-    max-width: 100%;
-    moz-transition: all .2s ease-in-out;
-    o-transition: all .2s ease-in-out;
-    padding: 2px;
-    transition: all .2s ease-in-out;
-    webkit-transition: all .2s ease-in-out;
+	background-color: #fff;
+	border: 1px solid #ededf0;
+	border-radius: 3px;
+	display: inline-block;
+	height: auto;
+	line-height: 1.428571429;
+	max-width: 100%;
+	moz-transition: all .2s ease-in-out;
+	o-transition: all .2s ease-in-out;
+	padding: 2px;
+	transition: all .2s ease-in-out;
+	webkit-transition: all .2s ease-in-out;
 }
 
 .img-circle {
-    border-radius: 50%;
+	border-radius: 50%;
 }
 
-
-.pricing {
-  @include translate(-49%, -49.1%);
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  width: 310px;
-  font-size: 0;
-  opacity: 1;
-  transition: opacity .2s ease;
+.pricing { @include translate(-49%, -49.1%);
+	position: absolute;
+	left: 50%;
+	top: 50%;
+	width: 310px;
+	font-size: 0;
+	opacity: 1;
+	transition: opacity .2s ease;
 }
 
 .price-option {
-  display: inline-block;
-  width: 24em;
-  vertical-align: middle;
-  margin-right: 0.3125em;
-  font-size: 16px;
-  opacity: 1;
-  transition: opacity .2s ease;
+	display: inline-block;
+	width: 24em;
+	vertical-align: middle;
+	margin-right: 0.3125em;
+	font-size: 16px;
+	opacity: 1;
+	transition: opacity .2s ease;
 }
 
-.price-option:last-child { margin-right: 0; }
+.price-option:last-child {
+	margin-right: 0;
+}
 
-.pricing:hover .price-option { opacity: 0.6; }
-.pricing:hover .price-option:hover { opacity: 1; }
+.pricing:hover .price-option {
+	opacity: 0.6;
+}
+
+.pricing:hover .price-option:hover {
+	opacity: 1;
+}
 
 .price-option__detail {
-  padding: 2em 0;
-  background: white;
-  text-align: center;
+	padding: 2em 0;
+	background: white;
+	text-align: center;
 }
 
-.price-option--low .price-option__detail  { border-radius: .25em 0 0 0; }
-.price-option--mid .price-option__detail  { padding: 2.3em 0; border-radius: .25em .25em 0 0; }
-.price-option--high .price-option__detail { border-radius: 0 .25em 0 0; }
+.price-option--low .price-option__detail {
+	border-radius: .25em 0 0 0;
+}
 
-.price-option__cost,
-.price-option__type {
-  display: block;
+.price-option--mid .price-option__detail {
+	padding: 2.3em 0;
+	border-radius: .25em .25em 0 0;
+}
+
+.price-option--high .price-option__detail {
+	border-radius: 0 .25em 0 0;
+}
+
+.price-option__cost, .price-option__type {
+	display: block;
 }
 
 .price-option__cost {
-  font-size: 1.5em;
-  color: #383838;
+	font-size: 1.5em;
+	color: #383838;
 }
 
 .price-option__type {
-  font-size: .7em;
-  text-transform: uppercase;
-  color: #909090;
+	font-size: .7em;
+	text-transform: uppercase;
+	color: #909090;
 }
 
 .price-option__purchase {
-  position: relative;
-  display: block;
-  padding: .6em;
-  font-size: .875em;
-  font-weight: bold;
-  text-align: center;
-  text-transform: uppercase;
-  text-decoration: none;
-  color: rgba(0,0,0,0.6);
+	position: relative;
+	display: block;
+	padding: .6em;
+	font-size: .875em;
+	font-weight: bold;
+	text-align: center;
+	text-transform: uppercase;
+	text-decoration: none;
+	color: rgba(0, 0, 0, 0.6);
 }
 
-.price-option--low .price-option__purchase  { background: #a7d155; border-radius: 0 0 0 .25em; }
-.price-option--mid .price-option__purchase  { background: #eada42; border-radius: 0 0 .25em .25em; }
-.price-option--high .price-option__purchase { background: #e54e4b; border-radius: 0 0 .25em 0; }
+.price-option--low .price-option__purchase {
+	background: #a7d155;
+	border-radius: 0 0 0 .25em;
+}
+
+.price-option--mid .price-option__purchase {
+	background: #eada42;
+	border-radius: 0 0 .25em .25em;
+}
+
+.price-option--high .price-option__purchase {
+	background: #e54e4b;
+	border-radius: 0 0 .25em 0;
+}
 
 .price-option__purchase:before {
-  content: '';
-  position: absolute;
-  bottom: 100%;
-  left: 50%;
-  display: block;
-  width: 0;
-  height: 0;
-  margin-left: -5px;
-  border-width: 0 5px 5px;
-  border-style: solid;
+	content: '';
+	position: absolute;
+	bottom: 100%;
+	left: 50%;
+	display: block;
+	width: 0;
+	height: 0;
+	margin-left: -5px;
+	border-width: 0 5px 5px;
+	border-style: solid;
 }
 
-.price-option--low .price-option__purchase:before  { border-color: transparent transparent #a7d155; }
-.price-option--mid .price-option__purchase:before  { border-color: transparent transparent #eada42; }
-.price-option--high .price-option__purchase:before { border-color: transparent transparent #e54e4b; }
-
-
-.icon-size
-{
-    font-size: 87px;
+.price-option--low .price-option__purchase:before {
+	border-color: transparent transparent #a7d155;
 }
-.img-venue{
+
+.price-option--mid .price-option__purchase:before {
+	border-color: transparent transparent #eada42;
+}
+
+.price-option--high .price-option__purchase:before {
+	border-color: transparent transparent #e54e4b;
+}
+
+.icon-size {
+	font-size: 87px;
+}
+
+.img-venue {
 	height: 200px !important;
 	width: auto;
 }
-.img-venue-carousel{
+
+.img-venue-carousel {
 	width: 100%;
 	height: auto;
 }
 
-
-
 /* ------------------------------------------------------------ */
-.text-right-center{
-        text-align: right;
-    }
- .plan-map{
-        height: 500px;
-    }
-
-@media (max-width: 720px) {
-    .text-right-center{
-        text-align: center;
-    }
-    .plan-map{
-        height: 250px;
-    }
+.text-right-center {
+	text-align: right;
 }
 
-.text-left-center{
-        text-align: left;
-    }
+.plan-map {
+	height: 500px;
+}
 
-@media (max-width: 720px) {
-    .text-left-center{
-        text-align: center;
-    }
+@media ( max-width : 720px) {
+	.text-right-center {
+		text-align: center;
+	}
+	.plan-map {
+		height: 250px;
+	}
+}
+
+.text-left-center {
+	text-align: left;
+}
+
+@media ( max-width : 720px) {
+	.text-left-center {
+		text-align: center;
+	}
 }
 
 .truncate {
-  width: 300px;
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
+	width: 300px;
+	white-space: nowrap;
+	overflow: hidden;
+	text-overflow: ellipsis;
 }
-
 
 /* Sticky footer styles
 -------------------------------------------------- */
 /* Sticky footer styles
 -------------------------------------------------- */
 html {
-  position: relative;
-  min-height: 100%;
-}
-body {
-  /* Margin bottom by footer height */
-  margin-bottom: 225px;
-  paddin-botton: 3rem;
-}
-.footer {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  /* Set the fixed height of the footer here */
-  height: 225px;
-  background-color: #f5f5f5;
+	position: relative;
+	min-height: 100%;
 }
 
-.search-div{
+body {
+	/* Margin bottom by footer height */
+	margin-bottom: 225px;
+	paddin-botton: 3rem;
+}
+
+.footer {
+	position: absolute;
+	bottom: 0;
+	width: 100%;
+	/* Set the fixed height of the footer here */
+	height: 225px;
+	background-color: #f5f5f5;
+}
+
+.search-div {
 	border-radius: 0px;
-    margin-top: 55px;
+	margin-top: 55px;
 }
-.venue-details{
-    min-height: 350px;
+
+.venue-details {
+	min-height: 350px;
 }
-.modal-bt{
-    border-radius: 0px;
-    font-weight: bold;
+
+.modal-bt {
+	border-radius: 0px;
+	font-weight: bold;
 }
 
 /* 404 error y 500 error */
-.error-template {padding: 40px 15px;text-align: center;margin-top: 50px;margin-bottom: 50px;}
-.error-actions {margin-top:15px;margin-bottom:15px;}
-.error-actions .btn { margin-right:10px; }
+.error-template {
+	padding: 40px 15px;
+	text-align: center;
+	margin-top: 50px;
+	margin-bottom: 50px;
+}
+
+.error-actions {
+	margin-top: 15px;
+	margin-bottom: 15px;
+}
+
+.error-actions .btn {
+	margin-right: 10px;
+}
+
+.plan-creation {
+    margin-top: 50px;
+    margin-bottom: 50px;
+	min-width: 332px;
+	max-width: 600px;
+	border: 1px solid #F0F0F0;
+	border-image: none;
+	border-width: 0px 1px 1px;
+	border-style: none solid solid;
+	border-bottom-left-radius: 3px;
+	border-bottom-right-radius: 3px;
+}
+.plan-creation-head{
+	background-color: #4184F3;
+    color: #FFF;
+    line-height: 2.25;
+}
