Arreglos visuales en listado de viajes planificados.

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -316,3 +316,10 @@ body {
     color: #FFF;
     line-height: 2.25;
 }
+.planned-trip-item{
+	height: 400px;
+}
+.img-lst-plan{
+	height: 180px;
+	width: auto;
+}
