--- a/principal/templates/trip_planned_list.html
+++ b/principal/templates/trip_planned_list.html
@@ -9,26 +9,28 @@
 
         <div class="col-xs-12 col-sm-11">
         {% for trip in trips %}
-            <div class="well col-xs-12 col-sm-offset-1 col-sm-5 col-md-offset-1 col-md-5  col-lg-3 col-lg-offset-1">
+            <div class="well col-xs-12 col-sm-offset-1 col-sm-5 col-md-offset-1 col-md-5  col-lg-3 col-lg-offset-1 planned-trip-item">
                 <div class="col-xs-12 text-center" style="min-height: 80px; text-align: center">
                     <h3 style="height: 80px; vertical-align: middle; display: table-cell;">{{trip.city|safe}}</h3>
                 </div>
                 <div class="col-xs-12">
-                    <img src="{{ trip.day_set.all.0.venues.all.0.photo }}" class="img-responsive" style="max-height: 250px" onerror="this.src='{% static "img/no-image.png" %}'">
+                    <img src="{{ trip.day_set.all.0.venues.all.0.photo }}" class="img-responsive img-lst-plan" style="max-height: 250px" onerror="this.src='{% static "img/no-image.png" %}'">
                 </div>
                 
-                <div class="col-xs-12" style="margin-top: 20px">
-                    <p><i class="fa fa-globe fa-1x"></i> {{trip.country|safe}}</p>
-                </div>
                 <div class="col-xs-12">
-                    <!-- <p><i class="fa fa-calendar"></i> {{trip.startDate}}</p> -->
-                    <p><i class="fa fa-money"></i> {{trip.coins}}</p>
-                </div>
-                <div class="col-xs-12">
-                    <ul class="list-inline list-unstyled">
-                        <li><a href="/show_planning/{{trip.scorable_ptr_id}}" style="text-decoration: None;"><i class="fa fa-info-circle"></i> {% trans "View more" %}</a></li>
-                    </ul>
-                </div>
+	                <div class="col-xs-12" style="margin-top: 20px">
+	                    <p><i class="fa fa-globe fa-1x"></i> {{trip.country|safe}}</p>
+	                </div>
+	                <div class="col-xs-12">
+	                    <!-- <p><i class="fa fa-calendar"></i> {{trip.startDate}}</p> -->
+	                    <p><i class="fa fa-money"></i> {{trip.coins}}</p>
+	                </div>
+	                <div class="col-xs-12">
+	                    <ul class="list-inline list-unstyled">
+	                        <li><a href="/show_planning/{{trip.scorable_ptr_id}}" style="text-decoration: None;"><i class="fa fa-info-circle"></i> {% trans "View more" %}</a></li>
+	                    </ul>
+	                </div>
+	            </div>
             </div>
         {% empty %}
         <p>{% trans "Oops! BrainTravel could not find anything..." %}</p>
