Corregida errata en privacy terms

--- a/principal/templates/privacy_terms_es.html
+++ b/principal/templates/privacy_terms_es.html
@@ -6,7 +6,7 @@
     <div class="row">
         <div class="col-lg-12 text-justify">
             <h2>T&eacuterminos y condiciones</h2>
-            <p>ADe acuerdo con las disposiciones de la Ley 15/1999, de 13 de Diciembre, de Protecci&oacuten de Datos de
+            <p>De acuerdo con las disposiciones de la Ley 15/1999, de 13 de Diciembre, de Protecci&oacuten de Datos de
                 Car&aacutecter Personal, (en adelante, LOPD), BrainTravel Co., Inc. NIF 12345678A le informa que los datos
                 recogidos en este sitio web ser&aacuten incorporados a un fichero automatizado inscrito ante la Agencia de
                 Protecci&oacuten de Datos y pertenecen a BrainTravel Co., Inc., teniendo como finalidad la de atender las
