Cambiadas las url de paypal y en los terminos etc.

--- a/principal/templates/about_us_en.html
+++ b/principal/templates/about_us_en.html
@@ -6,7 +6,7 @@
         <div class="col-lg-12 text-justify">
             <h2>About us</h2>
             <p>
-            <a href="http://www.braintravel.com">http://www.braintravel.com </a>is owned by BrainTravel Co., Inc.
+            <a href="http://54.69.54.93">BrainTravel </a>is owned by BrainTravel Co., Inc.
             </p>
             <p>
             Resident of Sevilla (41200)
@@ -16,7 +16,7 @@
             Registration Information: Registered in the Commercial Register of Seville, Date: 01/01/2015, Contract No.: 169011 BORME
             </p>
             <p>
-            The website <a href="http://www.braintravel.com">http://www.braintravel.com</a>is operated by BrainTravel Co., Inc. (the owner) as company.
+            The website <a href="http://54.69.54.93">BrainTravel</a>is operated by BrainTravel Co., Inc. (the owner) as company.
             </p>
             <p>
             For any problem with it, contact the email <a href="mailto:clientes.braintravel@gmail.com"> clientes.braintravel@gmail.com </a>
