--- a/principal/templates/about_us_es.html
+++ b/principal/templates/about_us_es.html
@@ -6,7 +6,7 @@
         <div class="col-lg-12 text-justify">
             <h2>Sobre nosotros</h2>
             <p>
-            <a href="http://www.braintravel.com">http://www.braintravel.com </a>es propiedad de BrainTravel Co., Inc.
+            <a href="http://54.69.54.93">BrainTravel </a>es propiedad de BrainTravel Co., Inc.
             </p>
             <p>
             Con sede en Sevilla (41200)
@@ -16,7 +16,7 @@
             Informaci&oacuten de registro: Inscrita en el Registro Mercantil de Sevilla, Fecha: 01/01/2015, Contrato n&deg .: 169011 BORME
             </p>
             <p>
-            La web <a href="http://www.braintravel.com">http://www.braintravel.com</a> es operado por BrainTravel Co., Inc. (el due&ntildeo) como empresa.
+            La web <a href="http://54.69.54.93">BrainTravel</a> es operado por BrainTravel Co., Inc. (el due&ntildeo) como empresa.
             </p>
             <p>
             Para cualquier problema con &eacutel, p&oacutengase en contacto con el correo electr&oacutenico <a href="mailto:clientes.braintravel@gmail.com"> clientes.braintravel@gmail.com </a>
