--- a/principal/templates/privacy_terms_es.html
+++ b/principal/templates/privacy_terms_es.html
@@ -35,19 +35,19 @@
             <h3>Condiciones del servicio</h3>
             <ol>
                 <li>
-                    El usuario o visitante de la p&aacutegina web </a>http://www.braintravel.com tiene la obligaci&oacuten de leer
+                    El usuario o visitante de la p&aacutegina web </a>http://54.69.54.93 tiene la obligaci&oacuten de leer
                     las condiciones de prestaci&oacuten del servicio que se detallan en este texto, de manera que asume
                     estas como v&aacutelidas en la prestaci&oacuten del servicio.
                 </li>
                 <li>
-                    Objetivos  de  la  p&aacutegina  web http://www.braintravel.com:  La  p&aacutegina  web  es  explotada
+                    Objetivos  de  la  p&aacutegina  web http://54.69.54.93:  La  p&aacutegina  web  es  explotada
                     econ&oacutemicamente a trav&eacutes de los pagos que se realizan a trav&eacutes de la pasarela de pago  PayPal.
                 </li>
 
                 <li>Condiciones de uso del contenido y servicios prestados en esta p&aacutegina web:
 	                <ul>
 	                   <li>No est&aacute permitida la reproducci&oacuten de los contenidos (de cualquier tipo) publicados en
-                           http://www.braintravel.com sin el consentimiento expreso del autor de dicha web. En este
+                           http://54.69.54.93 sin el consentimiento expreso del autor de dicha web. En este
                            caso hablamos de textos, gr&aacuteficos, c&oacutedigo fuente, y cualquier otro contenido que sea
                            servido desde esta p&aacutegina web.
                        </li>
@@ -60,22 +60,22 @@
                            ajeno.
                        </li>
 	                   <li>El autor de esta web no se hace responsable del mal uso que se haga del contenido expuesto
-                           en esta p&aacutegina web (<i>http://www.braintravel.com</i>).
+                           en esta p&aacutegina web (<i>http://54.69.54.93</i>).
                        </li>
-	                   <li>La p&aacutegina web http://www.braintravel.com es financiada y explotada
+	                   <li>La p&aacutegina web http://54.69.54.93 es financiada y explotada
                            econ&oacutemicamente a trav&eacutes de la publicidad expuesta en la misma, no existiendo ning&uacuten otro
                            tipo de explotaci&oacuten econ&oacutemica.
                        </li>
-	                   <li>El autor de http://www.braintravel.com no se hace responsable del mal
+	                   <li>El autor de http://54.69.54.93 no se hace responsable del mal
                            funcionamiento del sistema o servicio prestado en esta p&aacutegina web, aunque siempre se
                            pretende y trabaja para ofrecer el mejor servicio.
                        </li>
-	                   <li>El autor de la p&aacutegina web http://www.braintravel.com utiliza la
+	                   <li>El autor de la p&aacutegina web http://54.69.54.93 utiliza la
                            misma como soporte publicitario y no se hace responsable del mal servicio o problemas
                            surgidos por los servicios anunciados, de forma que la publicidad y los servicios
                            posteriores que esta remita son responsabilidad &uacutenica del anunciante.
                        </li>
-	                   <li>En esta p&aacutegina web (<i>http://www.braintravel.com</i>) NO existen contenidos ilegales
+	                   <li>En esta p&aacutegina web (<i>http://54.69.54.93</i>) NO existen contenidos ilegales
                            (pornograf&iacutea infantil, apolog&iacutea del terrorismo, o cualquier otro tipo de
                            contenido ilegal).
                        </li>
