--- a/principal/templates/plan_creation.html
+++ b/principal/templates/plan_creation.html
@@ -202,8 +202,7 @@ function copyValues() {
     var txt3 = input3.val();
 
     //evita repetidos
-    var prueba = input1.val().split(":")[0];
-    if (cat_id == prueba || category == input2.val().split(":")[0] || category == input3.val().split(":")[0]) {
+    if (cat_id == input1.val().split(":")[0] || cat_id == input2.val().split(":")[0] || cat_id == input3.val().split(":")[0]) {
         return false;
     }
 
