Nuevas traducciones encontradas.

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -312,7 +312,7 @@ body {
 	border-bottom-right-radius: 3px;
 }
 .plan-creation-head{
-	background-color: #4184F3;
+	background-color: #337AB7;
     color: #FFF;
     line-height: 2.25;
 }
